# arkham

./: README.md
copilot/: .workspace
copilot/api/: manifest.yml
fronts/web/: package.json
fronts/web/src/: App.css  (+1 more)
infra/: main.tf
services/blocks/: Dockerfile  gcloud.sh  pyproject.toml  requirements.txt  run.py
services/blocks/blocks/data/block_meta_stream/: block_meta_stream.py
services/blocks/blocks/data/block_meta_stream/std_block_meta_stream/: std_bloc_meta_stream__test.py  std_block_meta_stream.py  test.json
services/blocks/blocks/data/block_stream/: block_stream.py
services/blocks/blocks/data/block_stream/std_block_stream/: std_block_stream.py  std_block_stream__test.py
services/blocks/blocks/data/transactions_meta_getter/: transactions_meta_getter.py
services/blocks/blocks/data/transactions_meta_getter/std_transaction_getter/: std_transactions_getter__test.py  std_transactions_meta_getter.py
services/blocks/blocks/data/transactions_stream/: transactions_stream.py
services/blocks/blocks/data/transactions_stream/std_transactions_stream/: std_transactions_stream.py  std_transactions_stream__test.py  usd_conversion.py  wei.py
services/blocks/blocks/logic/block_streamer/: block_streamer.py
services/blocks/blocks/logic/block_streamer/std_block_streamer/: std_block_streamer.py  std_block_streamer__test.py
services/blocks/blocks/presentation/server/: server.py
services/blocks/blocks/presentation/server/std_server/: std_server.py
services/blocks/blocks/util/block/: block.py
services/blocks/blocks/util/transaction/: transaction.py
(+5 files in other folders)
