[tool.poetry]
name = "blocks"
version = "0.1.0"
description = ""
authors = ["Liam Monninger"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.4"
fastapi = "^0.95.0"
requests = "^2.28.2"
nest-asyncio = "^1.5.6"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
